# local-llm-benchmark

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
src/: benchmark.rs  cli.rs  llm_integration.rs  main.rs  metrics.rs
