[package]
name = "local-llm-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
fern = "0.7.1"
indicatif = "0.17.11"
libc = "0.2.171"
llm = { version = "1.1.0", optional = true }
log = "0.4.26"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.33.1"
thiserror = "2.0.12"

[features]
default = []
llama-rs = ["dep:llm"]

[dev-dependencies]
mockito = "1.0.0"
